--- a/notebooks/poster-model_vs_blind_map_real_data_omega3d.ipynb
+++ b/notebooks/poster-model_vs_blind_map_real_data_omega3d.ipynb
@@ -896,9 +896,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.7.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "3.7.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
