--- a/notebooks/example_for_ben.ipynb
+++ b/notebooks/example_for_ben.ipynb
@@ -823,9 +823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.7.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "3.7.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -837,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
