--- a/notebooks/rfs-gaussian.ipynb
+++ b/notebooks/rfs-gaussian.ipynb
@@ -221,9 +221,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "system",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "system"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
