add vmap-compatible make_unique function

--- a/notebooks/pava-dev.ipynb
+++ b/notebooks/pava-dev.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "529fab10",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-02-14 10:18:09.297477: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ba2617/code-server-3.12.0-linux-amd64/:\n",
+      "2022-02-14 10:18:10.933940: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ba2617/code-server-3.12.0-linux-amd64/:\n",
+      "2022-02-14 10:18:10.944823: W external/org_tensorflow/tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.10.1'; dlerror: libcudart.so.10.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/ba2617/code-server-3.12.0-linux-amd64/:\n"
+     ]
+    }
+   ],
    "source": [
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -17,8 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "f5c0fd4c",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +36,39 @@
     "    X_s = X[idx]\n",
     "    Y_s = Y[idx]\n",
     "    \n",
-    "    X_unique, Y_unique = make_unique(X_s, Y_s)\n",
+    "    X_unique = jnp.unique(X_s)\n",
+    "    num_unique = len(X_unique)\n",
+    "    X_unique, Y_unique = make_unique_fixed(X_s, Y_s, X_unique, num_unique)\n",
     "    return X_unique, Y_unique\n",
     "    \n",
-    "\n",
-    "def make_unique(X, Y, eps=1e-8):\n",
+    "def _pava(X_unique, Y_unique):\n",
+    "    pass\n",
+    "    \n",
+    "def make_unique_fixed(X, Y, X_unique, num_unique):\n",
+    "    # vmap-friendly version of make_unique_flexible.\n",
+    "    # Gets rid of duplicate independent variables in X,\n",
+    "    # and averages the corresponding obervations in Y.\n",
+    "    # NOTE: Assumes X and Y are sorted.\n",
+    "    \n",
+    "    with loops.Scope() as s:\n",
+    "        s.Y_out = jnp.empty(num_unique)\n",
+    "        \n",
+    "        for i in s.range(num_unique):\n",
+    "            curr_val = X_unique[i]\n",
+    "            avg_y = jnp.nanmean(jnp.where(X == curr_val, Y, jnp.nan))\n",
+    "            s.Y_out = index_update(s.Y_out, i, avg_y)\n",
+    "            \n",
+    "        return X_unique, s.Y_out\n",
+    "    \n",
+    "def make_unique_flexible(X, Y, eps=1e-8):\n",
     "    # Get rid of duplicate independent variables and associated observations\n",
-    "    # by averaging.\n",
+    "    # by averaging. In this case, we consider independent vars. X within some\n",
+    "    # tolerance to be the same.\n",
     "    # \n",
     "    # This is a direct copy of the implementation from sklearn here:\n",
     "    # https://github.com/scikit-learn/scikit-learn/blob/7e1e6d09bcc2eaeba98f7e737aac2ac782f0e5f1/sklearn/_isotonic.pyx#L66\n",
     "    # but modified to assume that all weights are equal 1\n",
-    "    n_unique = len(np.unique(X))\n",
+    "    n_unique = len(jnp.unique(X))\n",
     "    n_samples = X.shape[0]\n",
     "    \n",
     "    \n",
@@ -91,18 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "fe517826",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(DeviceArray([25., 30.], dtype=float32),\n",
+       "(DeviceArray([25, 30], dtype=int32),\n",
        " DeviceArray([ 7.6666665, 16.333334 ], dtype=float32))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,13 +139,12 @@
     "x = jnp.array([25,25,25,30,30,30])\n",
     "y = jnp.array([10,12,1,23, 19, 7])\n",
     "\n",
-    "pava(x, y)"
+    "pava(x,y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "bd427d1b",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9850cd9c",
    "metadata": {},
    "outputs": [],
    "source": []
